Fix overlapping of logs with other UI elements when job/flow names are long. (#2361)

--- a/azkaban-web-server/src/main/less/log.less
+++ b/azkaban-web-server/src/main/less/log.less
@@ -1,10 +1,27 @@
+html, body {
+  height: 100%;
+}
+
+#jobLogView {
+  height: 60%;
+}
+
+#flowLogView {
+  height: 65%;
+}
+
 .log-viewer {
   height: 100%;
+  position: relative;
   margin: 0;
   padding: 0;
 
   .panel {
-    position: relative;
+    position: absolute;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     height: 100%;
 
     .panel-heading {
